# weiss_wsg50

wsg50_common/: CMakeLists.txt
wsg50_common/srv/: Incr.srv  Move.srv  State.srv
wsg50_driver/: CMakeLists.txt  package.xml
wsg50_driver/include/wsg50/: cmd.h  functions.h  interface.h  msg.h  serial.h  tcp.h  udp.h
wsg50_driver/launch/: start.launch  wsg50.launch  wsg50_tcp.launch
wsg50_driver/module_config/: component.yaml  module.yaml
wsg50_driver/scripts/: gcl_tcp_driver.py
wsg50_driver/scripts/wsg50_driver/: gcl_tcp_driver.py
wsg50_driver/src/: cmd.c  common.cpp  functions.cpp  main.cpp  msg.c  serial.c  tcp.c  udp.c
wsg50_driver/test/: autotest.py  autotest.test
wsg50_simulation/: CMakeLists.txt
